indexbrowser ongoing development
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@30715 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/mycore.properties
+++ b/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/mycore.properties
@@ -11,6 +11,14 @@ MCR.Searcher.lucene-metadata.Index=metadata
 #MCR.Searcher.NormalizeFieldsBeforeIndexing=false
 #MCR.EventHandler.MCRObject.4.Indexer=solr-metadata
 
+
+##########################################
+# Index Browser 
+##########################################
+MCR.IndexBrowser.profkat.Searchfield=profkat_idx_profkat
+MCR.IndexBrowser.profkat.Labelfield=profkat_idx_profkat
+MCR.IndexBrowser.profkat.Datafields=profkat_period,profkat_last_professorship,profkat_last_faculty_class,profkat_state_msg
+
   
 MCR.AccessRule.STANDARD-RULE-ALL-EDITORS=<condition format\="xml"><boolean operator\="or"><condition field\="group" operator\="\=" value\="editorgroup1" /><condition field\="group" operator\="\=" value\="editorgroup1" /></boolean></condition>
 MCR.AccessRule.STANDARD-WORKFLOW-RULE=<condition format\="xml"><boolean operator\="or"><condition field\="group" operator\="\=" value\="editorgroup1" /><condition field\="group" operator\="\=" value\="editorgroup1" /></boolean></condition>
@@ -32,14 +40,6 @@ MCR.Class.SearchField.cpr_class_adminfunctions=class_admin
 MCR.Class.SearchField.cpr_class_professortypes=class_proftypes
 MCR.Class.SearchField.cpr_class_histfak=class_fac
 
-MCR.IndexBrowser.professorum.ExtraOutputFields=surname,firstname,//box.nameaffix/nameaffix,//box.professorship/professorship[last()]/event,//box.faculty/faculty[last()]/classification/@categid,//box.period/period/text,state
-MCR.IndexBrowser.professorum.FieldsToSort=profsortname,profname
-MCR.IndexBrowser.professorum.MaxPerPage=30
-MCR.IndexBrowser.professorum.Searchfield=profindex
-MCR.IndexBrowser.professorum.Style=person
-MCR.IndexBrowser.professorum.Table=person
-
-MCR
 MCR.WorkflowEngine.Administrator.Email=profkatadmin@beispiel-uni.de
 MCR.WorkflowEngine.EditDirectory.person=%MCR.datadir%/export/person
 MCR.WorkflowEngine.ManagerImpl.professorum=org.mycore.frontend.workflowengine.jbpm.professorum.MCRWorkflowManagerProfessorum
