--- a/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/mycore.properties
+++ b/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/mycore.properties
@@ -19,8 +19,17 @@ MCR.IndexBrowser.profkat.Searchfield=profkat_idx_profkat
 MCR.IndexBrowser.profkat.Labelfield=profkat_idx_profkat
 MCR.IndexBrowser.profkat.Datafields=profkat_period,profkat_last_professorship,profkat_last_faculty_class,profkat_state_msg
 
-
-
+##########################################
+# OAI Data Provider
+##########################################
+MCR.OAIDataProvider.OAI2.Search.Restriction=objectType:person
+MCR.OAIDataProvider.OAI2.Sets.bkl=xslStyle:classification2sets:classification:metadata:1:children:cpr_class_cprbkl
+MCR.OAIDataProvider.OAI2.MapSetToClassification.bkl=cpr_class_cprbkl
+MCR.OAIDataProvider.OAI2.Sets.objectType=webapp:oai/set_objectType.xml
+MCR.OAIDataProvider.OAI2.MapSetToQuery.test=objectType:person
+MCR.OAIDataProvider.OAI2.MapSetToQuery.objectType\:person=objectType:person
+MCR.OAIDataProvider.OAI2.MapSetToQuery.objectType\:document=objectType:document
+MCR.OAIDataProvider.OAI2.DeletedRecord=persistent
   
 MCR.AccessRule.STANDARD-RULE-ALL-EDITORS=<condition format\="xml"><boolean operator\="or"><condition field\="group" operator\="\=" value\="editorgroup1" /><condition field\="group" operator\="\=" value\="editorgroup1" /></boolean></condition>
 MCR.AccessRule.STANDARD-WORKFLOW-RULE=<condition format\="xml"><boolean operator\="or"><condition field\="group" operator\="\=" value\="editorgroup1" /><condition field\="group" operator\="\=" value\="editorgroup1" /></boolean></condition>
@@ -34,7 +43,6 @@ MCR.URIResolver.Classification.Sort.cpr_class_adminfunctions=false
 MCR.URIResolver.Classification.Sort.cpr_class_degree=false
 MCR.URIResolver.Classification.Sort.cpr_class_professortypes=false
 MCR.URIResolver.Classification.Sort.cpr_class_histfak=false
-
 
 MCR.Class.SearchField.cpr_class_cprbkl=class_bkl
 MCR.Class.SearchField.cpr_class_adminfunctions=class_admin
@@ -61,12 +69,10 @@ MCR.WorkflowEngine.defaultACL.person.deletewf.professorum=<conditions format\="x
 MCR.WorkflowEngine.defaultACL.person.read.professorum=<conditions format\="xml"><condition field\="group" operator\="\=" value\="editprofessorum" /></conditions>
 MCR.WorkflowEngine.defaultACL.person.writedb.professorum=<conditions format\="xml"><condition field\="group" operator\="\=" value\="editprofessorum" /></conditions>
 
-
 MCR.WorkflowEngine.professorum.admin=robert.stephan@uni-rostock.de
 MCR.WorkflowEngine.professorum.from=unigeschichte@uni-rostock.de
 MCR.WorkflowEngine.professorum.replyto=unigeschichte@uni-rostock.de
 
-  
 MCR.NameOfProject=Beispielprofessorenkatalog
 MCR.SWF.Project.ID=pk
 MCR.Metadata.ObjectID.NumberPattern=00000000
