--- a/profkat-sample-webapp/src/main/config/mycore.properties
+++ b/profkat-sample-webapp/src/main/config/mycore.properties
@@ -1,8 +1,9 @@
 ## linux defaults
-#MCR.datadir=/data/apps/profkat/working_content
-#MCR.basedir=/data/apps/profkat/target/profkat-sample/profkat
-#MCR.baseurl=http://profkatsample.meine-einrichtung.de/
-#log4j.rootLogger=INFO, stdout
+#MCR.datadir=/opt/profkat/data
+#MCR.basedir=/opt/profkat/projects/profkat-sample-webapp/target/profkat-sample
+#MCR.baseurl=http://localhost:8080/profkat-sample/
+#MCR.Module-solr.ServerURL=http://localhost:8080/solr/profkat
+#log4j.rootLogger=INFO, stdout, R
 #log4j.logger.org.mycore.datamodel=ERROR, stdout, R
 #MCR.Mail.Server=email.meine-einrichtungk.de
 #MCR.EHCache.diskStore.path=%MCR.datadir%/ehcache/hibernate
@@ -10,7 +11,7 @@
 
 ## windows defaults
 MCR.datadir=C:/workspaces/profkat/working_content
-MCR.basedir=C:/workspaces/profkat/projects/profkatsample-complete/target/profkatsample-app/profkatsample
+MCR.basedir=C:/workspaces/profkat/projects/profkat-sample-webapp/target/profkatsample-app/profkatsample
 MCR.baseurl=http://localhost:8080/profkatsample/
 log4j.rootLogger=INFO, stdout, R
 log4j.logger.org.mycore.common.xml.MCRLayoutService=ERROR, stdout, R
