--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -27,8 +27,8 @@ MCR.OAIDataProvider.OAI2.Sets.bkl=xslStyle:classification2sets:classification:me
 MCR.OAIDataProvider.OAI2.MapSetToClassification.bkl=cpr_class_cprbkl
 MCR.OAIDataProvider.OAI2.Sets.objectType=webapp:oai/set_objectType.xml
 MCR.OAIDataProvider.OAI2.MapSetToQuery.test=objectType:person
-MCR.OAIDataProvider.OAI2.MapSetToQuery.objectType\:person=objectType:person
-MCR.OAIDataProvider.OAI2.MapSetToQuery.objectType\:document=objectType:document
+MCR.OAIDataProvider.OAI2.MapSetToQuery.objectType_person=objectType:person
+MCR.OAIDataProvider.OAI2.MapSetToQuery.objectType_document=objectType:document
 MCR.OAIDataProvider.OAI2.DeletedRecord=persistent
   
 MCR.AccessRule.STANDARD-RULE-ALL-EDITORS=<condition format\="xml"><boolean operator\="or"><condition field\="group" operator\="\=" value\="editorgroup1" /><condition field\="group" operator\="\=" value\="editorgroup1" /></boolean></condition>
