--- a/profkat-sample-webapp/pom.xml
+++ b/profkat-sample-webapp/pom.xml
@@ -11,7 +11,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<hibernate.version>4.3.4.Final</hibernate.version>
-		<mcr.finalName>profkatsample</mcr.finalName>
+		<mcr.finalName>profkat-sample</mcr.finalName>
 	</properties>
 	<pluginRepositories>
 		<pluginRepository>
