workflow integration and configuration
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@30946 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-sample-webapp/build.xml
+++ b/profkat-sample-webapp/build.xml
@@ -9,6 +9,7 @@
 	<property name="CONTENT_DIR" value="${basedir}/content" />
 	
 	<property name="HOME" value="${basedir}/target/app" />
+	
 
 	<property name="SOLR_DEFAULT_CONFIG_URL" value="http://artifactory.mycore.de/libs-snapshots-local/org/mycore/solr/solr-home/4.8.1-SNAPSHOT/solr-home-4.8.1-20141014.165252-1.zip" />
 	<property name="SOLR_CORE_ID" value="profkat" />
@@ -26,9 +27,7 @@
 	<condition property="ant.library.dir" value="${ant.home}/lib">
 		<os family="unix" />
 	</condition>
-	<property name="MCR.JDBCStore.Type" value="hibernate" />
-	<property name="MCR.XMLStore.Type" value="hibernate" />
-	
+		
 	<import file="${PARENT_BUILD_FILE}" optional="true"/>
 
 	<classloader name="cli-classloader" classpathref="APP_CLASSPATH" />
@@ -38,11 +37,22 @@
 		-->
 		
 	</target>
+	
 	<target name="usage">
 		<antcall target="main_build.usage" />
 	</target>
 	
 	<target name="create.directories" depends="init">
+		<java fork="true" dir="${HOME}" jar="${HOME}/${APP_NAME}-cli.jar">
+			<arg value="create directory ${MCR.Editor.FileUpload.TempStoragePath}
+				;; create directory ${MCR.LogDirectory}
+				;; create directory ${MCR.Save.FileSystem}
+				;; create directory ${MCR.WebContent.SaveFolder}
+				;; create directory ${MCR.WorkflowEngine.EditDirectory.person}
+				;; create directory ${MCR.WorkflowEngine.DeleteDirectory}
+				;; create directory ${MCR.EHCache.diskStore.path}" />
+		</java>
+		<!--
 			<taskdef name="mcr-execute" classname="org.mycore.buildtools.anttasks.MCRExecuteCommandTask" classpathref="APP_CLASSPATH" />
 			<mcr-execute>
 				create directory ${MCR.Editor.FileUpload.TempStoragePath}
@@ -53,12 +63,31 @@
 				create directory ${MCR.WorkflowEngine.DeleteDirectory}
 				create directory ${MCR.EHCache.diskStore.path}
 			</mcr-execute>
+		-->
 		</target>
 
 	<target name="create.users" depends="init">
 		<mkdir dir="${basedir}/target/user_encrypted" />
-		<taskdef name="mcr-execute" classname="org.mycore.buildtools.anttasks.MCRExecuteCommandTask" classpathref="APP_CLASSPATH" />
+		<java fork="true" dir="${HOME}" jar="${HOME}/${APP_NAME}-cli.jar">
+			<arg value="update classification from file ${basedir}/content/user/mcr-roles.xml
+				;; load permissions data from file ${CONTENT_DIR}/user/permissions.xml
+	     	    ;; init superuser
+		            
+				;; change to user root with alleswirdgut
+					
+				;; encrypt passwords in user xml file ${CONTENT_DIR}/user/user_administrator.xml to file ${basedir}/target/user_encrypted/user_administrator.xml
+				;; update user from file ${basedir}/target/user_encrypted/user_administrator.xml	
+					
+				;; encrypt passwords in user xml file ${CONTENT_DIR}/user/user_editorPK.xml to file ${basedir}/target/user_encrypted/user_editorPK.xml
+				;; update user from file ${basedir}/target/user_encrypted/user_editorPK.xml
 
+				;; encrypt passwords in user xml file ${CONTENT_DIR}/user/user_editorWeb.xml to file ${basedir}/target/user_encrypted/user_editorWeb.xml
+				;; update user from file ${basedir}/target/user_encrypted/user_editorWeb.xml
+						
+				;; load permissions data from file ${CONTENT_DIR}/user/default-object-permissions.xml" />
+		</java>
+		<!--
+		<taskdef name="mcr-execute" classname="org.mycore.buildtools.anttasks.MCRExecuteCommandTask" classpathref="APP_CLASSPATH" />
 		<mcr-execute>
 			update classification from file ${basedir}/content/user/mcr-roles.xml
 
@@ -78,20 +107,31 @@
 				
 			load permissions data from file ${CONTENT_DIR}/user/default-object-permissions.xml
     	</mcr-execute>
+    	-->
 	</target>
 	
-	<target name="create.class" depends="init">
+	<target name="create.class" depends="init" >
+		<java fork="true" dir="${HOME}" jar="${HOME}/${APP_NAME}-cli.jar">
+			<arg value="update all classifications from directory C:\workspaces\cpr\projects\profkat-sample-webapp/content/classification" />
+		</java>
+	<!--
 		<taskdef name="mcr-execute" classname="org.mycore.buildtools.anttasks.MCRExecuteCommandTask" classpathref="APP_CLASSPATH" />
 		<mcr-execute>
 	           update all classifications from directory ${CONTENT_DIR}/classification
 		</mcr-execute>
+	-->
 	</target>
 
 	<target name="deploy.workflows" >
+		<java fork="true" dir="${HOME}" jar="${HOME}/${APP_NAME}-cli.jar">
+			<arg value="deploy workflow processdefinition from resource config/workflow/processdefinitions/create_object_simple.bpmn20.xml" />
+		</java>
 		<taskdef name="mcr-execute" classname="org.mycore.buildtools.anttasks.MCRExecuteCommandTask" classpathref="APP_CLASSPATH" />
+		<!--
 		<mcr-execute>
-			deploy workflow processdefinition from resource /config/workflow/processdefinitions/create_object_simple.bpmn20.xml   	
+			deploy workflow processdefinition from resource /config/workflow/processdefinitions/create_object_simple.bpmn20.xml
        	</mcr-execute>
+       	-->
 	</target>
 
 	<target name="update.solr.config">
