mcrobjid_base as selector for workspace
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@30955 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -105,7 +105,7 @@ MCR.Activiti.WorkflowMgr.class.create_object_simple.default_person=org.mycore.ac
 # last item in key should map to a group ID
 # value = a url                                                               
 ##############################################################################
-MCR.Application.Login.StartLink.editprofessorum=showWorkspace.action?projectID=%MCR.SWF.Project.ID%&objectType=person
+MCR.Application.Login.StartLink.editprofessorum=showWorkspace.action?mcrobjid_base=%MCR.SWF.Project.ID%_person
 
 
 # MyCoRe types for indexing objects, document is default
