--- a/profkat-sample-webapp/src/main/config/mycore.properties
+++ b/profkat-sample-webapp/src/main/config/mycore.properties
@@ -12,7 +12,8 @@
 ## windows defaults
 MCR.datadir=C:/workspaces/profkat/working_content
 MCR.basedir=C:/workspaces/profkat/projects/profkat-sample-webapp/target/app/profkat-sample
-MCR.baseurl=http://localhost:8080/profkatsample/
+MCR.baseurl=http://localhost:8080/profkat-sample-webapp/
+MCR.Module-solr.ServerURL=http://localhost:8980/solr/profkat
 log4j.rootLogger=INFO, stdout, R
 log4j.logger.org.mycore.common.xml.MCRLayoutService=ERROR, stdout, R
 log4j.logger.httpclient.wire=ERROR, stdout, R
